# sunrise

./: .gitignore  README.md  algo1.py  algo2.py  correct.py  helpers.py  pyproject.toml  requirements-skyfield.txt  requirements.txt  sun.py  sunrise-full.py  sunrise-temp.py  sunrise.bat  sunrise.py  sunset.py  test-rig.py  wrong_algo.py
TaskScheduler/: Sunrise.xml
src/: sunrise.py
sunrise/: __init__.py  approx.py  correct.py  daylen.py  helpers.py  test_rig.py
test/: daylen.py  helpers.py  test_rig.py  wrong_algo.py
testing/: approx.py  correct.py  daylen.py  helpers.py  test-rig.py  wrong_algo.py
