[project]
name = "sunrise"
description = "Tell me when the sun is rise. And fall, I guess."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = ["geocoder", "pendulum"]
dynamic = ["version"]

[project.optional-dependencies]
skyfield = ["skyfield"]
toml = ["pytomlpp"]
cli = ["colorama; platform_system == 'Windows'"]
all = ["toml", "cli"]
lint = ["ruff"]
check = ["mypy"]
dev = ["all", "lint", "check"]

[project.urls]
Documentation = "https://github.com/alexblandin/sunrise#readme"
Issues = "https://github.com/alexblandin/sunrise/issues"
Source = "https://github.com/alexblandin/sunrise"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/sunrise.py"

[tool.hatch.envs.default]
dependencies = ["geocoder", "pendulum"]
features = ["toml", "cli", "skyfield"]

[tool.hatch.envs.lint]
dependencies = ["lint"]
detached = true

[tool.hatch.envs.dev]
features = ["dev"]
post-install-commands = ["mypy --install-types --non-interactive src/mymodule"]

[tool.ruff]
indent-width = 2
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ERA",    # code comments actually help 
  "INP001", # useless before hatch
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  "T20",    # print is good, actually 
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
