[project]
name = "sunrise"
description = "Tell me when the sun is rise. And fall, I guess."
version = "2.0.1"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = ["geocoder", "whenever", "attrs", "cattrs"]

[tool.uv.sources]
geocoder = { git = "https://github.com/AlexBlandin/geocoder3" }

[project.optional-dependencies]
skyfield = ["skyfield"]
dev = ["ruff"]

[project.urls]
Documentation = "https://github.com/alexblandin/sunrise#readme"
Issues = "https://github.com/alexblandin/sunrise/issues"
Source = "https://github.com/alexblandin/sunrise"

[tool.ruff]
indent-width = 2
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ERA",    # code comments actually help
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  # "T20",    # print is good, actually 
  "D202",   # a little vertical separation can be nice
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
